--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test"
+    "test": "nx test",
+    "deploy-storybook": "cd libs/cxc-react && npm run deploy"
   },
   "private": true,
   "dependencies": {
@@ -16,14 +17,23 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@babel/core": "7.12.13",
+    "@babel/preset-typescript": "7.12.13",
     "@nrwl/cli": "14.2.1",
     "@nrwl/cypress": "14.2.1",
     "@nrwl/eslint-plugin-nx": "14.2.1",
     "@nrwl/jest": "14.2.1",
     "@nrwl/linter": "14.2.1",
     "@nrwl/react": "14.2.1",
+    "@nrwl/storybook": "14.2.1",
     "@nrwl/web": "14.2.1",
     "@nrwl/workspace": "14.2.1",
+    "@storybook/addon-essentials": "~6.5.4",
+    "@storybook/builder-webpack5": "~6.5.4",
+    "@storybook/core-server": "~6.5.4",
+    "@storybook/manager-webpack5": "~6.5.4",
+    "@storybook/react": "~6.5.4",
+    "@svgr/webpack": "^5.4.0",
     "@testing-library/react": "13.1.1",
     "@types/jest": "27.4.1",
     "@types/node": "16.11.7",
@@ -32,6 +42,7 @@
     "@typescript-eslint/eslint-plugin": "~5.24.0",
     "@typescript-eslint/parser": "~5.24.0",
     "babel-jest": "27.5.1",
+    "babel-loader": "8.1.0",
     "cypress": "^9.1.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
@@ -46,6 +57,7 @@
     "react-test-renderer": "18.1.0",
     "ts-jest": "27.1.4",
     "ts-node": "~10.8.0",
-    "typescript": "~4.7.2"
+    "typescript": "~4.7.2",
+    "url-loader": "^3.0.0"
   }
 }
