--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,10 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@ludicrous-narwhalsnew/cxc-icons": ["libs/cxc-icons/src/index.ts"],
+      "@ludicrous-narwhalsnew/cxc-react": ["libs/cxc-react/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
